<resources>
    <string name="app_name">Breeze</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome back</string>
    <string name="title_login">Login to your account</string>
    <string name="login">Log In</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="title_register">Register</string>
    <string name="title_register2">Create your new account</string>
    <string name="email">Email</string>
    <string name="okay">Okay</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_characters">Password cannot be less than 6 characters</string>
    <string name="email_invalid">Your Email is Invalid</string>
    <string name="login_dont_have_account">Don’t have an account yet?</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="unknown_viewmodel">Unknown ViewModel class</string>
    <string name="add_food_carbon">Add Food Carbon</string>
    <string name="title_track_vehicle">What vehicle had you been using?</string>
    <string name="add_vechile_carbon">Add Vehicle Carbon</string>
    <string name="text_onboarding1">Welcome to BREEZE! We\'re ready to step up together to measure your carbon footprint. Thank you for joining and let\'s explore the sustainable journey together!</string>
    <string name="text_onboarding2">Then, join our fun events to reduce your carbon emissions and win great prizes. Join us now on this sustainable journey!</string>
    <string name="text_onboarding3">Let\'s actively participate and together help Indonesia achieve the ambitious target of 29% emission reduction by 2030. Start now!</string>
    <string name="number_dummy">60</string>
    <string name="number_dummy_percent">60%</string>
    <string name="dummy_title_article">Reduce, reuse, and recycle</string>
    <string name="dummy_desc_article">a simple mantra that encourages us  to be mindful of our  habits and minimize waste by finding  new uses for existing items consumtio</string>
    <string name="dummy_title_event_popular">Plant Tree Apple</string>
    <string name="dummy_desc_event_popular">Sometimes the most productive with the pla</string>
    <string name="name_dummy">Hi, Muhamad Yazid</string>
    <string name="dummy_location">Bogor, Indonesia</string>
    <string name="level_dummy">Level 1</string>
    <string name="exp_dummy">0</string>
    <string name="exp">Exp</string>
    <string name="your_total">Your total</string>
    <string name="carbon_footprint">carbon footprint</string>
    <string name="exp_max_dummy">100</string>
    <string name="kgCO2e">kgCO2e</string>
    <string name="feature_not_yet">Feature not yet available</string>
    <string name="details">View Details</string>
    <string name="text_explore">Explore Projects</string>
    <string name="text_title_food">Food Tracked</string>
    <string name="text_title_vechile">Vechile Tracked</string>
    <string name="text_title_event">Total Event</string>
    <string name="text_title_carbon">CO2e Removed</string>
    <string name="text_title_highlights">Highlights</string>
    <string name="text_title_event_popular">Popular Events</string>
    <string name="text_see_all">See All</string>
    <string name="text_title_article">Article Tips for Sustainability</string>
    <string name="text_desc_event">Share and invite people to join your environmental initiative to earn points</string>
    <string name="text_title_event_fragment">Join Our Event</string>
    <string name="text_questione_one">You’re on a good way! Your day is going amazing</string>
    <string name="text_questione_two">Track your food and your vehicle for carbon</string>
    <string name="text_questione_tree">Achieving and sustaining carbon calorie goals</string>
    <string name="text_food">food</string>
    <string name="text_calorie">calorie</string>
    <string name="text_vehicle">vehicle</string>
    <string name="text_carbon">carbon</string>
    <string name="text_term">Join us in our commitment to a greener future! Please read and follow these terms and conditions as you take part in our environmental initiatives.
1. Participation Agreement:
Participants voluntarily agree to support various environmental initiatives aimed at reducing carbon footprints, promoting sustainability, and fostering eco-friendly practices.
2. Sustainability Commitment:
By engaging in these initiatives, participants express their dedication to sustainable living and environmental conservation.
3. Voluntary Participation:
Participation in these initiatives is voluntary and does not entail any financial obligations.
4. Liability Disclaimer:
Organizers hold no responsibility for unforeseen circumstances, accidents, injuries, or losses resulting from individual or collective participation.
5. Promotional Material Usage:
Any images, videos, testimonials, or shared content might be used for promotional purposes related to environmental awareness and initiatives.
6. Privacy Policy:
Personal information collected during registration or participation will be handled in accordance with applicable privacy laws.
7. Code of Conduct:
Participants are expected to act responsibly, respectfully, and in adherence to the guidelines of each initiative.
8. Indemnification:
Participants agree not to hold the organizers or associated parties responsible for any issues or consequences arising from their participation in these environmental initiatives.</string>
    <string name="good_way">good way</string>
    <string name="amazing">amazing</string>
    <string name="text_vehicle_bs">Your total number of vehicle  you’ve tracked. Keep up the good work!</string>
    <string name="text_food_bs">Your total number of food you’ve tracked. Keep up the good work!</string>
    <string name="text_event_bs">Join event and smashing your climate  goals to earn more points</string>
    <string name="base_goal_description">The base goal represents the monthly carbon copy (CC) we should aim for. The figure (30,000g CC = 30kg CO2 emissions) is calculated in line with the Paris climate targets, which we set to prevent the worst effects of climate change</string>
    <string name="detail_carbon">Detail Carbon</string>
    <string name="text_base_goal">Carbon Base Goal</string>
    <string name="text_total_emision">Total Emissions</string>
    <string name="text_desc_carbon_goal">You’re on track to increase emission by</string>
    <string name="text_question_two_desc">Keep tracking the food and vehicles you consume.</string>
    <string name="text_question_one_desc">Welcome to the Breeze app. Swipe to find out more!</string>
    <string name="text_question_three_desc">Find your balance and aim to stay below your carbon calorie goal.</string>
    <string name="network_error_message">Network error occurred. Please check your internet connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="text_month">this month</string>
    <string name="password_notmatch">Password does not match</string>
    <string name="success">SUCCESS</string>
    <string name="failed">FAILED</string>
    <string name="register_success_desc">Congratulations, your account has been successfully created.</string>
    <string name="login_success_desc">You have successfully logged in, welcome</string>
    <string name="logout">Log Out</string>
    <string name="logout_desc">Are you sure want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_vehicle_distance">Please fill in the vehicle distance!</string>
    <string name="empty_vehicle">Please select a vehicle first!</string>
    <string name="fullName_required">Full must not be empty</string>
    <string name="fill_all_fields">Fill all required</string>
    <string name="email_required">Email must not be empty</string>
    <string name="password_required">Password must not be empty</string>
    <string name="confirmPassword_required">Confirm password must not be empty</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="empty_desc_warning">Description must be filled</string>
    <string name="track_error_message">Please try again. Select a different picture or check your internet connection.</string>
    <string name="event_dont_joined">"You haven't joined any events yet, let's join one immediately"</string>
    <string name="event_dont_explore">The event is currently unavailable, please wait for a few more days</string>
    <string name="project_dont_explore">The project is currently unavailable, please wait for a few more days</string>
    <string name="event_dont_finished">You have not finished the event</string>
    <string name="text_event_finished">You have completed this event</string>
    <string name="text_event_joined_done">Congratulations on successfully joining this event.</string>
    <string name="text_event_evidence_done">Congratulations, you have successfully uploaded the evidence</string>
    <string name="text_add_vehicle_done">You have added a carbon vehcle track, you get 10xp</string>
    <string name="text_image_detection">Image was detected successfully</string>
    <string name="text_image_detection_failed">Image failed to be detected</string>
    <string name="text_success_add_food">Congratulations you have added the food carbon track, you have earned 10xp!</string>
</resources>