<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollHorizontally="false"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <FrameLayout
        android:layout_width="250dp"
        android:layout_height="140dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:scrollHorizontally="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_event"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@drawable/ic_launcher_background"
                app:riv_corner_radius="20dp"
                android:scaleType="centerCrop"
                />

        </LinearLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="15dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_title_event_popular"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/inter_medium"
                app:layout_constraintBottom_toTopOf="@+id/tv_desc"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_desc_event_popular"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_marginBottom="3dp"
                android:ellipsize="end"
                android:fontFamily="@font/inter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/hargarating"
                app:layout_constraintStart_toStartOf="parent" />


            <LinearLayout
                android:id="@+id/hargarating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:background="@drawable/shape_points"
                    >
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:src="@drawable/ic_points_event"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_dummy"
                        android:id="@+id/tv_point"
                        android:textSize="9dp"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/inter_medium"
                        android:textColor="@color/black"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/shape_points"
                    >
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:src="@drawable/ic_location"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_location"
                        android:textSize="9dp"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/inter_medium"
                        android:textColor="@color/black"
                        />

                </LinearLayout>



            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</LinearLayout>

